This commit will
finish the fan out rules, for now

--- a/elements/crew-team-manager-compare/crew-team-manager-compare-list-results.html
+++ b/elements/crew-team-manager-compare/crew-team-manager-compare-list-results.html
@@ -63,8 +63,9 @@
             }
 
             .selector {
-                height: 64px;
-                width: 64px;
+                @applt(--layout-center);
+                height: 32px;
+                width: 32px;
             }
         </style>
 
