This commit will
finish rules (for now)
and break the app

--- a/elements/crew-team-manager-app/crew-team-manager-app.html
+++ b/elements/crew-team-manager-app/crew-team-manager-app.html
@@ -13,7 +13,7 @@
         <style>
              :host {
                 @apply(--layout-horizontal);
-                background-color: blue;
+                background-color: #164410;
             }
 
             #pages {
@@ -30,9 +30,9 @@
             }
         </style>
 
-        <firebase-app id="app" name="crew-team-manager" api-key="AIzaSyC9hRU3H5E-8jPEC84CZJVXxW1-2DL1Idc" auth-domain="crew-team-manager.firebaseapp.com"
-            database-url="https://crew-team-manager.firebaseio.com" project-id="crew-team-manager" storage-bucket="crew-team-manager.appspot.com"
-            messaging-sender-id="629517639732">
+        <firebase-app id="app" name="laborsync-ctm" api-key="AIzaSyCihAWRMu9JkJv8MDq5V6VqjLPLHNT6Pl8" auth-domain="laborsync-ctm.firebaseapp.com"
+            database-url="https://laborsync-ctm.firebaseio.com" project-id="laborsync-ctm" storage-bucket="laborsync-ctm.appspot.com"
+            messaging-sender-id="806566666459">
         </firebase-app>
 
 
@@ -56,7 +56,7 @@
                 return {
                     _page: {
                         type: String,
-                        value: 'stage'
+                        value: 'login'
                     },
 
 
