--- a/elements/crew-team-manager-finance/crew-team-manager-finance-detail.html
+++ b/elements/crew-team-manager-finance/crew-team-manager-finance-detail.html
@@ -59,10 +59,10 @@
             }
         </style>
 
-        <firebase-document id="firebase" app-name="crew-team-manager" path="/finances/{{finance}}" data="{{_data}}">
+        <firebase-document id="firebase" app-name="laborsync-ctm" path="/finances/{{finance}}" data="{{_data}}">
         </firebase-document>
 
-        <firebase-document id="firebase-team" app-name="crew-team-manager" path="/teams/{{_data.team}}" data="{{_team}}">
+        <firebase-document id="firebase-team" app-name="laborsync-ctm" path="/teams/{{_data.team}}" data="{{_team}}">
         </firebase-document>
 
         <app-header-layout id="layout">
