--- a/elements/crew-team-manager-compare/crew-team-manager-compare-list.html
+++ b/elements/crew-team-manager-compare/crew-team-manager-compare-list.html
@@ -81,7 +81,7 @@
             }
         </style>
 
-        <firebase-query app-name="crew-team-manager" id="query" path="/athletes" data="{{_data}}">
+        <firebase-query app-name="laborsync-ctm" id="query" path="/athletes" data="{{_data}}">
         </firebase-query>
 
         <app-header-layout id="layout" has-scrolling-region fullbleed>
