--- a/elements/crew-team-manager-erg/crew-team-manager-erg-detail.html
+++ b/elements/crew-team-manager-erg/crew-team-manager-erg-detail.html
@@ -59,9 +59,9 @@
             }
         </style>
 
-        <firebase-document id="firebase" app-name="crew-team-manager" path="/ergs/{{erg}}" data="{{_data}}">
+        <firebase-document id="firebase" app-name="laborsync-ctm" path="/ergs/{{erg}}" data="{{_data}}">
         </firebase-document>
-        <firebase-document id="firebase-team" app-name="crew-team-manager" path="/teams/{{_data.team}}" data="{{_team}}">
+        <firebase-document id="firebase-team" app-name="laborsync-ctm" path="/teams/{{_data.team}}" data="{{_team}}">
         </firebase-document>
 
         <app-header-layout id="layout">
