--- a/elements/crew-team-manager-fleet/crew-team-manager-fleet-detail.html
+++ b/elements/crew-team-manager-fleet/crew-team-manager-fleet-detail.html
@@ -59,9 +59,9 @@
             }
         </style>
 
-        <firebase-document id="firebase" app-name="crew-team-manager" path="/boats/{{boat}}" data="{{_data}}"> </firebase-document>
+        <firebase-document id="firebase" app-name="laborsync-ctm" path="/boats/{{boat}}" data="{{_data}}"> </firebase-document>
 
-        <firebase-document id="firebase-team" app-name="crew-team-manager" path="/teams/{{_data.team}}" data="{{_team}}">
+        <firebase-document id="firebase-team" app-name="laborsync-ctm" path="/teams/{{_data.team}}" data="{{_team}}">
         </firebase-document>
 
         <app-header-layout id="layout">
