--- a/elements/crew-team-manager-race/crew-team-manager-race-list.html
+++ b/elements/crew-team-manager-race/crew-team-manager-race-list.html
@@ -68,7 +68,7 @@
             }
         </style>
 
-        <firebase-query app-name="crew-team-manager" id="query" path="/races" data="{{_data}}">
+        <firebase-query app-name="laborsync-ctm" id="query" path="/races" data="{{_data}}">
         </firebase-query>
 
         <app-header-layout id="layout" has-scrolling-region fullbleed>
