--- a/elements/crew-team-manager-roster/crew-team-manager-roster-detail.html
+++ b/elements/crew-team-manager-roster/crew-team-manager-roster-detail.html
@@ -59,9 +59,9 @@
             }
         </style>
 
-        <firebase-document id="firebase" app-name="crew-team-manager" path="/athletes/{{athlete}}" data="{{_data}}">
+        <firebase-document id="firebase" app-name="laborsync-ctm" path="/athletes/{{athlete}}" data="{{_data}}">
         </firebase-document>
-        <firebase-document id="firebase-team" app-name="crew-team-manager" path="/teams/{{_data.team}}" data="{{_team}}">
+        <firebase-document id="firebase-team" app-name="laborsync-ctm" path="/teams/{{_data.team}}" data="{{_team}}">
         </firebase-document>
 
 
