--- a/elements/crew-team-manager-schedule/crew-team-manager-schedule-detail.html
+++ b/elements/crew-team-manager-schedule/crew-team-manager-schedule-detail.html
@@ -59,7 +59,7 @@
             }
         </style>
 
-        <firebase-document id="firebase" app-name="crew-team-manager" path="/regattas/{{regatta}}" data="{{_data}}">
+        <firebase-document id="firebase" app-name="laborsync-ctm" path="/regattas/{{regatta}}" data="{{_data}}">
         </firebase-document>
 
         <app-header-layout id="layout">
