--- a/elements/crew-team-manager-schedule/crew-team-manager-schedule-edit.html
+++ b/elements/crew-team-manager-schedule/crew-team-manager-schedule-edit.html
@@ -56,7 +56,7 @@
         </style>
 
 
-        <firebase-document id="firebase" app-name="crew-team-manager">
+        <firebase-document id="firebase" app-name="laborsync-ctm">
         </firebase-document>
 
         <app-header-layout id="layout">
