--- a/elements/crew-team-manager-team/crew-team-manager-team-detail.html
+++ b/elements/crew-team-manager-team/crew-team-manager-team-detail.html
@@ -59,7 +59,7 @@
             }
         </style>
 
-        <firebase-document id="firebase" app-name="crew-team-manager" path="/teams/{{team}}" data="{{_data}}">
+        <firebase-document id="firebase" app-name="laborsync-ctm" path="/teams/{{team}}" data="{{_data}}">
         </firebase-document>
 
         <app-header-layout id="layout">
