--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             bottom: 0px;
             left: 0px;
             right: 0px;
-            background-color: blue;
+            background-color: #164410;
             position: absolute;
         }
     </style>
